Clients: fixed layout problems at all sizes #1018

--- a/app/source/css/components/SimpleList.styl
+++ b/app/source/css/components/SimpleList.styl
@@ -3,11 +3,13 @@
 **/
 /* Component vars */
 $heightLimit = 33px;
-/* Used the same gap as buttons, equals
+/* Used the same gap
+    as containers for horizontal (to get aligned with them)
+    as buttons for vertical (easy to press, equals
     to the implicit gap in $actionWidth
-    and heights,
+    and heights).
     H for Horizontal and V for Vertical */
-$contentHGap = 12px;
+$contentHGap = $container-padding-left;
 $contentVGap = 6px;
 
 .SimpleList {
